Implement academy payout requests
